add images to the entities

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@
 APP_ENV=dev
 APP_SECRET=0e09850437d90ea84b8386216aa5af41
 
-DATABASE_URL="mysql://root:root@localhost:3309/api_s5?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@localhost:3307/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
 ###< symfony/framework-bundle ###
 
