Création, authentification, deconnexion

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,15 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+auth:
+    path: /api/auth
+    methods: ['POST']
+
+#Route pour rafraichir notre JWT
+api_refresh_token:
+    path: /api/token/refresh
+
+#Route pour invalider notre token de rafraichissement (le supprimer). utile pour se "déconnecter" réellement.
+api_token_invalidate:
+    path: /api/token/invalidate
