--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /public/bundles/
 /var/
 /vendor/
+/config/packages/doctrine.yaml
 ###< symfony/framework-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
