--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -18,5 +18,7 @@ api_platform:
         extra_properties:
             standard_put: true
             rfc_7807_compliant_errors: true
+        pagination_items_per_page: 25
+        pagination_enabled: true
     event_listeners_backward_compatibility_layer: false
     keep_legacy_inflector: false
