--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,8 @@ security:
                 check_path: api_refresh_token
             logout:
                 path: api_token_invalidate
-
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
